--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=Ospom
-version=0.1.3
-author=Scott Tomko <staff@ReefPOM.com>, Greg Tomko <staff@ReefPOM.com>
+version=0.1.31
+author=Scott Tomko <staff@ReefPOM.com>, Greg Tomko <staff@ReefPOM.com>, Linda Close <staff@ReefPOM.com>
 maintainer=Scott Tomko <staff@ReefPOM.com>
-sentence=A library allowing any arduino to be displayed on the internet for free via ospom.com.
-paragraph=It works by connecting via USB to any internet conected linux cpu and OSPOM's servers, bypassing annoying router setup.  The linux software necessary is in a seperate repository in ospom's BitBucket.  Pre-loaded o-droids are also available at ReefPOM.com
-category=Cloud
+sentence=Ospom is FaceBook for your Arduino.
+paragraph=A library allowing any arduino to be displayed on the internet for free via ospom.com/user. It works by connecting via USB to any internet conected linux cpu and OSPOM's servers, bypassing annoying router setup.  The linux software necessary is in a seperate repository at BitBucket.org/ReefPOM.  Pre-loaded micro-SD cards forRaspberry Pi, Odroid, and pcDuino are also available upon request, and at ReefPOM.com.
+category=Other
 url=https://github.com/ReefPOM/OSPOM
 architectures=avr
 
